--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,5 @@
 [develop]
-script_dir=$base/lib/tugas-robotika
+script_dir=$base/lib/tugas_robotika
 
 [install]
-install_scripts=$base/lib/tugas-robotika
-
+install_scripts=$base/lib/tugas_robotika
